# synth

./: .gitignore  CMakeLists.txt  README.md  synth.jucer
AudioLib/: CMakeLists.txt  Distortion.cpp  Distortion.h  Oscillator.cpp  Oscillator.h
Binaries/: Synth
Demo/: synthdemo.flp
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SynthSound.h  SynthVoice.h
Synth/: ADSRComponent.cpp  ADSRComponent.h  AmpComponent.cpp  AmpComponent.h  AudioBufferQueue.h  CMakeLists.txt  Config.h  Delay.h  DelayComponent.cpp  DelayComponent.h  FilterComponent.cpp  FilterComponent.h  LFOComponent.cpp  LFOComponent.h  OscillatorComponent.cpp  OscillatorComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbComponent.cpp  ReverbComponent.h  RotarySlider.cpp  RotarySlider.h  RotarySliderLookAndFeel.cpp  RotarySliderLookAndFeel.h  ScopeComponent.h  ScopeDataCollector.h  Styles.h  SynthComponent.cpp  SynthComponent.h  SynthSound.h  SynthVoice.cpp  SynthVoice.h  WaveformButton.cpp  WaveformButton.h
